--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,286 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Megrim&display=swap");
+
+@font-face {
+  font-family: ChristmasSquad;
+  src: url("fonts/ChristmasSquad.otf") format("opentype");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#background-wrap {
+  bottom: 0;
+  left: 0;
+  padding-top: 50px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* KEYFRAMES */
+
+@-webkit-keyframes animateCloud {
+  0% {
+    margin-left: -1000px;
+  }
+  100% {
+    margin-left: 100%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@-moz-keyframes animateCloud {
+  0% {
+    margin-left: -1000px;
+  }
+  100% {
+    margin-left: 100%;
+  }
+}
+
+@keyframes animateCloud {
+  0% {
+    margin-left: -1000px;
+  }
+  100% {
+    margin-left: 100%;
+  }
+}
+
+/* ANIMATIONS */
+
+.x1 {
+  visibility: hidden;
+}
+
+.x2 {
+  visibility: hidden;
+}
+
+.x3 {
+  -webkit-animation: animateCloud 30s linear infinite;
+  -moz-animation: animateCloud 30s linear infinite;
+  animation: animateCloud 30s linear infinite;
+
+  -webkit-transform: scale(0.5);
+  -moz-transform: scale(0.5);
+  transform: scale(0.5);
+}
+
+.x4 {
+  -webkit-animation: animateCloud 18s linear infinite;
+  -moz-animation: animateCloud 18s linear infinite;
+  animation: animateCloud 18s linear infinite;
+
+  -webkit-transform: scale(0.4);
+  -moz-transform: scale(0.4);
+  transform: scale(0.4);
+}
+
+.x5 {
+  -webkit-animation: animateCloud 25s linear infinite;
+  -moz-animation: animateCloud 25s linear infinite;
+  animation: animateCloud 25s linear infinite;
+
+  -webkit-transform: scale(0.55);
+  -moz-transform: scale(0.55);
+  transform: scale(0.55);
+}
+
+/* OBJECTS */
+
+.cloud {
+  background: #fff;
+  background: -moz-linear-gradient(top, #fff 5%, #f1f1f1 100%);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(5%, #fff),
+    color-stop(100%, #f1f1f1)
+  );
+  background: -webkit-linear-gradient(top, #fff 5%, #f1f1f1 100%);
+  background: -o-linear-gradient(top, #fff 5%, #f1f1f1 100%);
+  background: -ms-linear-gradient(top, #fff 5%, #f1f1f1 100%);
+  background: linear-gradient(top, #fff 5%, #f1f1f1 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
+
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
+
+  -webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+
+  height: 120px;
+  position: relative;
+  width: 350px;
+}
+
+.cloud:after,
+.cloud:before {
+  background: #fff;
+  content: "";
+  position: absolute;
+  z-index: -1;
+}
+
+.cloud:after {
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
+
+  height: 100px;
+  left: 50px;
+  top: -50px;
+  width: 100px;
+}
+
+.cloud:before {
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  border-radius: 200px;
+
+  width: 180px;
+  height: 180px;
+  right: 50px;
+  top: -90px;
+}
+
+.employee {
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 6px 15px 0 rgba(31, 38, 135, 0.37);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  backdrop-filter: blur(5px);
+  border-radius: 15px;
+  width: 100vw;
+}
+
+.title {
+  font-family: "ChristmasSquad";
+  font-size: 50px;
+}
+
+footer {
+  height: 10vh;
+  bottom: 0;
+  background: rgba(4, 203, 74, 0.3);
+  position: fixed;
+  width: 100%;
+  backdrop-filter: blur(5px);
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 8px 8px 8px 0 rgba(31, 38, 135, 0.37);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.subheader {
+  font-family: "Megrim", cursive;
+  color: rgb(0, 255, 0);
+  font-weight: bold;
+}
+
+.App {
+  position: absolute;
+  width: 100vw;
+  background: #1fa2ff;
+  background: -webkit-linear-gradient(to bottom, #a6ffcb, #12d8fa, #1fa2ff);
+  background: linear-gradient(to bottom, #a6ffcb, #12d8fa, #1fa2ff);
+}
+
+.card-link {
+  color: black;
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 7px;
+  border-radius: 4px;
+  transition: background-color 0.2s, color 0.2s;
+  box-shadow: 0 1px 3px 0 rgba(31, 38, 135, 0.37);
+}
+
+.card-link:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: rgba(12, 16, 70);
+}
+
+.loading {
+  position: absolute;
+  height: 25vh;
+  width: 100wv;
+  background-image: url("assets/giphy.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#loading {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 70vh;
+  width: 100vw;
+}
+
+#employee {
+  height: 100vh;
+}
+
+.container {
+  height: 100%;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 25px;
+}
+
+.input-group {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+.App {
+  width: 100vw;
+}
+
+.header {
+  text-align: center;
   color: white;
+  background: rgba(236, 51, 51, 0.9);
+  box-shadow: 0 5px 8px 0 rgba(31, 38, 135, 0.37);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  padding: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.sun:hover {
+  background-color: yellow;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.dark:hover {
+  background-color: darkblue;
+}
+
+.snow:hover {
+  background-color: lightblue;
+}
+
+.theme {
+  padding: 10px;
+  width: 45px;
+  height: 45px;
+  border-radius: 100%;
+  border: 1px solid black;
+  margin: 5px;
+  cursor: pointer;
+}
+
+.tree {
+  z-index: 99;
+}
+
+@media screen and (max-width: 768px) {
+  .tree {
+    display: none;
   }
 }
