--- a/src/App.css
+++ b/src/App.css
@@ -280,6 +280,9 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
+  .container {
+    margin-bottom: 70px;
+  }
   .tree {
     display: none;
   }
